캐릭터 이미지 추가가

--- a/index.html
+++ b/index.html
@@ -37,5 +37,9 @@
   <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="game.js?v=1"></script>
+    <!-- 이미지 프리로드 -->
+    <div style="display: none">
+      <img src="player.png" id="playerImage" />
+    </div>
   </body>
 </html>
