--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       content="no-cache, no-store, must-revalidate"
     />
     <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="Expires" content="-1" />
+    <meta http-equiv="Cache" content="no-cache">
     <title>미니 뱀파이어 서바이벌</title>
     <meta
       name="viewport"
@@ -35,8 +36,8 @@
     </style>
   </head>
   <body>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
-    <script src="game.js?v=1"></script>
+    <canvas id="gameCanvas" width="1200" height="800"></canvas>
+    <script src="game.js?v=5"></script>
     <!-- 이미지 프리로드 -->
     <div style="display: none">
       <img src="player.png" id="playerImage" />
