--- a/index.html
+++ b/index.html
@@ -17,26 +17,66 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <style>
-      canvas {
-        border: 1px solid black;
-        background: #2c3e50;
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
       }
+
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+
       body {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        margin: 0;
-        background: #34495e;
+        background: #3c3932;
         touch-action: none;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         user-select: none;
       }
+
+      #gameContainer {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+      }
+
+      canvas {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: #3c3932;
+      }
+
+      @media (max-aspect-ratio: 4/3) {
+        canvas {
+          width: 100%;
+          height: auto;
+        }
+      }
+
+      @media (min-aspect-ratio: 4/3) {
+        canvas {
+          width: auto;
+          height: 100%;
+        }
+      }
     </style>
   </head>
   <body>
-    <canvas id="gameCanvas" width="1200" height="800"></canvas>
+    <div id="gameContainer">
+      <canvas id="gameCanvas"></canvas>
+    </div>
     <script type="module">
       import { Game } from "./game.js";
       window.onload = function () {
