스페이드 완료료

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </script>
     <!-- 이미지 프리로드 -->
     <div style="display: none">
-      <img src="player.png" id="playerImage" />
+      <img src="sprite/player/Player_idel.png" id="playerImage" />
     </div>
   </body>
 </html>
